small change to week view to fix date visibility on mobile devices

--- a/timApp/static/scripts/tim/plugin/calendar/calendar.component.scss
+++ b/timApp/static/scripts/tim/plugin/calendar/calendar.component.scss
@@ -1,3 +1,7 @@
+.cal-week-view .cal-day-headers .cal-header {
+  padding: 5px 0px;
+}
+
 .time-period-btn{
   width: max-content;
   margin-top: 26px;
